# HardwareMonitoring

./: .$Untitled Diagram.drawio.bkp  .gitignore  CMakeLists.txt  CPUPerf.cpp  CPUPerf.h  CPUPerfTwoShot.h  CalculateMetric.cpp  CalculateMetric.h  Calculator.h  Counter.cpp  Counter.hpp  DependencyChecker.h  Device.cpp  Device.hpp  Experiment3.sh  Experiment3_IO.sh  Experiment3_PERF.sh  FileManager.cpp  FileManager.h  GPUFile.cpp  GPUFile.h  Graph.h  IOFile.cpp  IOFile.h  Measurement.h  Metric.h  Monitor.cpp  Monitor.h  NIC.cpp  NIC.hpp  NvidiaGPU.cpp  NvidiaGPU.h  NvidiaGPU.hpp  Output.cpp  Output.hpp  OutputConfiguration.cpp  OutputConfiguration.hpp  PerfCompHardwaremonitoring.cpp  PerfCompPerfEvent.cpp  PerfEvent.hpp  (+20 more)
Core/: Counter.hpp  DependencyChecker.cpp  DependencyChecker.h  Measurement.cpp  Metric.h  Monitor.h  Output.hpp  OutputConfiguration.hpp  SamplingMethod.cpp  SamplingMethod.h
Devices/: Device.hpp  NIC.cpp
Devices/Polling/: CPUPerf.cpp  CPUPerf.h  GPUComputation.cpp  GPUComputation.h  GPUFile.h  IOFile.cpp  NIC.cpp  NIC.h
Devices/TwoShot/: CPUPerfTwoShot.cpp  IOFileTwoShot.cpp  IOFileTwoShot.h
Experiments/Experiment0/: MonitoringInterface.cpp  MonitoringInterface.h  WorkloadOlap_Blocking.cpp  WorkloadOlap_Blocking.cu  WorkloadOlap_Pipelined.cu  WorkloadRunEverything.cpp
Experiments/Experiment0/CudaHelperFiles/: storage.hpp  util.hpp
Experiments/Experiment2/: intense_cpu.cpp  run_intense_cpu_parameterized_test.sh  show_intense_cpu_parameterized_plot.py
Experiments/Experiment3/: Experiment3_IO.sh  IOFile_Monitored.cpp  IOFile_Raw.cpp  PerfEvent.hpp
TempPresentations/: Project_Presentation_aleks.odp
Visualizer/: makepics.sh  visualizer.py
final_cpu/: runtimes.csv
src/: HardwareMonitoring.cpp
